--- a/LangChain/Agent_from_Scratch_ReACT.ipynb
+++ b/LangChain/Agent_from_Scratch_ReACT.ipynb
@@ -1,8 +1,375 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "00ebf82c",
+   "metadata": {},
+   "source": [
+    "https://learn.deeplearning.ai/courses/ai-agents-in-langgraph/lesson/c1l2c/build-an-agent-from-scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3c052d5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "import re\n",
+    "import httpx\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "_ = load_dotenv()\n",
+    "from openai import OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5a3ecea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = OpenAI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c57fca4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_completion = client.chat.completions.create(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[{\"role\": \"user\", \"content\": \"Hello world\"}]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "55bc2511",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatCompletion(id='chatcmpl-BMeOB1fIlqsn9v1EiuIkfRZSwJr0Q', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Hello there! How can I assist you today?', refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1744738171, model='gpt-3.5-turbo-0125', object='chat.completion', service_tier='default', system_fingerprint=None, usage=CompletionUsage(completion_tokens=11, prompt_tokens=9, total_tokens=20, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_completion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "abdaaceb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello there! How can I assist you today?'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_completion.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7c83e70d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Agent:\n",
+    "    def __init__(self, system=\"\"):\n",
+    "        self.system = system\n",
+    "        self.messages = []\n",
+    "        if self.system:\n",
+    "            self.messages.append({\"role\": \"system\", \"content\": system})\n",
+    "\n",
+    "    def __call__(self, message):\n",
+    "        self.messages.append({\"role\": \"user\", \"content\": message})\n",
+    "        result = self.execute()\n",
+    "        self.messages.append({\"role\": \"assistant\", \"content\": result})\n",
+    "        return result\n",
+    "\n",
+    "    def execute(self):\n",
+    "        completion = client.chat.completions.create(\n",
+    "                        model=\"gpt-4o\", \n",
+    "                        temperature=0,\n",
+    "                        messages=self.messages)\n",
+    "        return completion.choices[0].message.content\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e823cca7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"\"\"\n",
+    "You run in a loop of Thought, Action, PAUSE, Observation.\n",
+    "At the end of the loop you output an Answer\n",
+    "Use Thought to describe your thoughts about the question you have been asked.\n",
+    "Use Action to run one of the actions available to you - then return PAUSE.\n",
+    "Observation will be the result of running those actions.\n",
+    "\n",
+    "Your available actions are:\n",
+    "\n",
+    "calculate:\n",
+    "e.g. calculate: 4 * 7 / 3\n",
+    "Runs a calculation and returns the number - uses Python so be sure to use floating point syntax if necessary\n",
+    "\n",
+    "average_dog_weight:\n",
+    "e.g. average_dog_weight: Collie\n",
+    "returns average weight of a dog when given the breed\n",
+    "\n",
+    "Example session:\n",
+    "\n",
+    "Question: How much does a Bulldog weigh?\n",
+    "Thought: I should look the dogs weight using average_dog_weight\n",
+    "Action: average_dog_weight: Bulldog\n",
+    "PAUSE\n",
+    "\n",
+    "You will be called again with this:\n",
+    "\n",
+    "Observation: A Bulldog weights 51 lbs\n",
+    "\n",
+    "You then output:\n",
+    "\n",
+    "Answer: A bulldog weights 51 lbs\n",
+    "\"\"\".strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "afcaab79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate(what):\n",
+    "    return eval(what)\n",
+    "\n",
+    "def average_dog_weight(name):\n",
+    "    if name in \"Scottish Terrier\": \n",
+    "        return(\"Scottish Terriers average 20 lbs\")\n",
+    "    elif name in \"Border Collie\":\n",
+    "        return(\"a Border Collies average weight is 37 lbs\")\n",
+    "    elif name in \"Toy Poodle\":\n",
+    "        return(\"a toy poodles average weight is 7 lbs\")\n",
+    "    else:\n",
+    "        return(\"An average dog weights 50 lbs\")\n",
+    "\n",
+    "known_actions = {\n",
+    "    \"calculate\": calculate,\n",
+    "    \"average_dog_weight\": average_dog_weight\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "815f4d75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abot = Agent(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4a008625",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thought: I should look up the average weight of a Toy Poodle using the average_dog_weight action.\n",
+      "Action: average_dog_weight: Toy Poodle\n",
+      "PAUSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = abot(\"How much does a toy poodle weigh?\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d8aee7f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = average_dog_weight(\"Toy Poodle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7cd54c30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a toy poodles average weight is 7 lbs'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d7cd84a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next_prompt = \"Observation: {}\".format(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b0f5eee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Answer: A Toy Poodle weighs an average of 7 lbs.'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abot(next_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a3f14e63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'system',\n",
+       "  'content': 'You run in a loop of Thought, Action, PAUSE, Observation.\\nAt the end of the loop you output an Answer\\nUse Thought to describe your thoughts about the question you have been asked.\\nUse Action to run one of the actions available to you - then return PAUSE.\\nObservation will be the result of running those actions.\\n\\nYour available actions are:\\n\\ncalculate:\\ne.g. calculate: 4 * 7 / 3\\nRuns a calculation and returns the number - uses Python so be sure to use floating point syntax if necessary\\n\\naverage_dog_weight:\\ne.g. average_dog_weight: Collie\\nreturns average weight of a dog when given the breed\\n\\nExample session:\\n\\nQuestion: How much does a Bulldog weigh?\\nThought: I should look the dogs weight using average_dog_weight\\nAction: average_dog_weight: Bulldog\\nPAUSE\\n\\nYou will be called again with this:\\n\\nObservation: A Bulldog weights 51 lbs\\n\\nYou then output:\\n\\nAnswer: A bulldog weights 51 lbs'},\n",
+       " {'role': 'user', 'content': 'How much does a toy poodle weigh?'},\n",
+       " {'role': 'assistant',\n",
+       "  'content': 'Thought: I should look up the average weight of a Toy Poodle using the average_dog_weight action.\\nAction: average_dog_weight: Toy Poodle\\nPAUSE'},\n",
+       " {'role': 'user',\n",
+       "  'content': 'Observation: a toy poodles average weight is 7 lbs'},\n",
+       " {'role': 'assistant',\n",
+       "  'content': 'Answer: A Toy Poodle weighs an average of 7 lbs.'}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abot.messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fcf000df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abot = Agent(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "038bcd16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thought: I need to find the average weight of both a Border Collie and a Scottish Terrier, then add them together to find the combined weight.\\nAction: average_dog_weight: Border Collie\\nPAUSE'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"\"\"I have 2 dogs, a border collie and a scottish terrier. \\\n",
+    "What is their combined weight\"\"\"\n",
+    "abot(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10c981e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next_prompt = \"Observation: {}\".format(average_dog_weight(\"Border Collie\"))\n",
+    "print(next_prompt)"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "oaiagent_venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
