--- a/LangChain/Agent_from_Scratch_ReACT.ipynb
+++ b/LangChain/Agent_from_Scratch_ReACT.ipynb
@@ -5,12 +5,13 @@
    "id": "00ebf82c",
    "metadata": {},
    "source": [
-    "https://learn.deeplearning.ai/courses/ai-agents-in-langgraph/lesson/c1l2c/build-an-agent-from-scratch"
+    "* https://learn.deeplearning.ai/courses/ai-agents-in-langgraph/lesson/c1l2c/build-an-agent-from-scratch\n",
+    "* https://platform.openai.com/api-keys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3c052d5d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "36f1a4b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The installed openai version is: 1.74.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The installed openai version is: {openai.__version__}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "5a3ecea2",
    "metadata": {},
    "outputs": [],
@@ -37,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c57fca4c",
    "metadata": {},
    "outputs": [],
